# LLM-client-manager

./: .env.template  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/clients/: __init__.py  base.py  mock_client.py  ollama_client.py  openai_client.py
app/config/: __init__.py  config.py
app/managers/: __init__.py  manager.py
app/routers/: __init__.py  dependencies.py  generate.py
app/schemas/: generate.py
tests/: test_generate.py
